src/css/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import "./homePage.css";
@import "./header.css";
@import "./intro-loader-animation.css";
@import "./hamburger-bar.css";

@layer components {
  .page-gutter {
    @apply max-w-6xl mx-auto px-2 sm:px-6 lg:px-8;
  }

  .markdown {
    @apply text-slate-100 pt-6 prose prose-headings:text-red-400 prose-xl prose-a:text-green-400;
  }
}

.markdown {
  margin: auto;
}

/* Override the list marker color to be slate-100 */
.markdown li::marker {
  color: #f1f5f9 
}

/* Override the code block background color */
.markdown pre {
  background-color: #18181b !important;
}

.markdown strong {
  color: #f87171;
  font-weight: bolder;
  font-size: 22px;
}

.markdown em {
  color: #e2e8f0;
  font-weight: 300;
  font-size: 18px;
}

.markdown h2 {
  margin-top: 80px;
}

.markdown h3 {
  margin-top: 20px;
}

.markdown img {
  border-radius: 0.5rem;
  width: 100%;
}

